--- a/.github/workflows/tex-to-pdf.yml
+++ b/.github/workflows/tex-to-pdf.yml
@@ -1,16 +1,10 @@
-name: TeX to PDF
+name: Tex to PDF
 run-name: ${{ github.workflow }}
 
 on:
   push:
-    branches: [main]
-    paths:
-      - "**/*.tex"
-      - ".github/workflows/tex-to-pdf.yml"
-
-concurrency:
-  group: resume-${{ github.ref }}
-  cancel-in-progress: true
+    branches:
+      - main
 
 jobs:
   build:
@@ -21,58 +15,45 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-          fetch-depth: 0
 
-      # Faster & reliable: latexmk + cached TeX Live
-      - name: Set up LaTeX (TeX Live + cache)
-        uses: teatimeguest/setup-texlive-action@v3
-        with:
-          packages: >-
-            latexmk
-            texlive-latex-recommended
-            texlive-latex-extra
-            texlive-fonts-recommended
-            # add any specific packages you use, e.g. fontspec, xcolor, etc.
-
-      - name: Build PDF
+      - name: Install TeXLive
         run: |
-          set -euo pipefail
-          latexmk -pdf -interaction=nonstopmode -halt-on-error -file-line-error -jobname=Onur_Ravli_Resume resume.tex
-          ls -lh Onur_Ravli_Resume.pdf
+          sudo apt-get update
+          sudo apt-get install -y texlive-latex-extra texlive-fonts-recommended
 
-      - name: Upload PDF artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: Onur_Ravli_Resume
-          path: Onur_Ravli_Resume.pdf
-          if-no-files-found: error
-          retention-days: 7
+      - name: Compile LaTeX to PDF
+        run: |
+          pdflatex -jobname=Onur_Ravli_Resume resume.tex
 
-      - name: Commit and push PDF to this repo
+      - name: Commit and push PDF
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "${{ github.actor }}@users.noreply.github.com"
-          git config --local user.name  "${{ github.actor }}"
+          git config --local user.name "${{ github.actor }}"
           git add Onur_Ravli_Resume.pdf
-          git commit -m "docs: update resume" || exit 0
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
+          git commit -m "docs: update resume" || echo "No changes to commit"
+          git push https://${{ github.actor }}:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
 
-      - name: Push PDF to onurravli-com
-        if: success()
+      - name: Push PDFs to onurravli-com repository
         env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }} # fine-grained PAT with contents:write on onurravli-com
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          set -euo pipefail
-          git clone --depth=1 https://x-access-token:${PAT_TOKEN}@github.com/onurravli/onurravli-com.git website
-          cd website
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+
+          # Clone the target repository using PAT
+          git clone https://${{ github.actor }}:${PAT_TOKEN}@github.com/onurravli/onurravli-com.git
+          cd onurravli-com
+
+          # Create public folder if it doesn't exist
           mkdir -p public
+
+          # Copy PDFs to public folder
           cp ../Onur_Ravli_Resume.pdf public/Onur_Ravli_Resume.pdf
-          git config --local user.email "${{ github.actor }}@users.noreply.github.com"
-          git config --local user.name  "${{ github.actor }}"
+
+          # Commit and push to target repository
           git add public/Onur_Ravli_Resume.pdf
-          git commit -m "docs: update resume from automated build" || exit 0
-          # adjust branch if website repo uses 'main'
-          git push origin HEAD:main
+          git commit -m "docs: update resume from automated build" || echo "No changes to commit"
+          git push https://${{ github.actor }}:${PAT_TOKEN}@github.com/onurravli/onurravli-com.git master
