--- a/.github/workflows/tex-to-pdf.yml
+++ b/.github/workflows/tex-to-pdf.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Compile LaTeX to PDF
         run: |
-          pdflatex -jobname=Onur_Ravli_Resume resume.tex
+          pdflatex -jobname=egb_resume resume.tex
 
       - name: Commit and push PDF
         env:
@@ -31,29 +31,6 @@ jobs:
         run: |
           git config --local user.email "${{ github.actor }}@users.noreply.github.com"
           git config --local user.name "${{ github.actor }}"
-          git add Onur_Ravli_Resume.pdf
+          git add egb_resume.pdf
           git commit -m "docs: update resume" || echo "No changes to commit"
           git push https://${{ github.actor }}:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
-
-      - name: Push PDFs to onurravli-com repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          git config --global user.name "${{ github.actor }}"
-
-          # Clone the target repository using PAT
-          git clone https://${{ github.actor }}:${PAT_TOKEN}@github.com/onurravli/onurravli-com.git
-          cd onurravli-com
-
-          # Create public folder if it doesn't exist
-          mkdir -p public
-
-          # Copy PDFs to public folder
-          cp ../Onur_Ravli_Resume.pdf public/Onur_Ravli_Resume.pdf
-
-          # Commit and push to target repository
-          git add public/Onur_Ravli_Resume.pdf
-          git commit -m "docs: update resume from automated build" || echo "No changes to commit"
-          git push https://${{ github.actor }}:${PAT_TOKEN}@github.com/onurravli/onurravli-com.git master
